--- a/Task3.ipynb
+++ b/Task3.ipynb
@@ -2687,7 +2687,6 @@
         "graph = NetworkGraph(network)\n",
         "\n",
         "# Precompute an UBODT table\n",
-        "# Can be skipped if you already generated an ubodt file\n",
         "if os.path.isfile(\"/content/data/ubodt.txt\"):\n",
         "    ubodt = UBODT.read_ubodt_csv(\"/content/data/ubodt.txt\")\n",
         "    print(\"Read the ubodt file\")\n",
@@ -2745,21 +2744,21 @@
         "    wkt = \"LINESTRING(\" + \",\".join([\" \".join(map(str, point)) for point in polyline]) + \")\"\n",
         "\n",
         "    result = fmm_model.match_wkt(wkt, fmm_config)\n",
-        "    train1500[i][\"MATCHING_ALGORITHM\"] = \"fmm\"\n",
+        "    train1500[i][\"MAP_MATCHING_ALGORITHM\"] = \"fmm\"\n",
         "\n",
         "    if not list(result.cpath):\n",
         "        result = stmatch_model.match_wkt(wkt, stmatch_config)\n",
-        "        train1500[i][\"MATCHING_ALGORITHM\"] = \"stmatch\"\n",
+        "        train1500[i][\"MAP_MATCHING_ALGORITHM\"] = \"stmatch\"\n",
         "        if not list(result.cpath):\n",
         "            print(f\"No match found for trajectory index {i}, WKT: {wkt}\")\n",
         "\n",
         "    train1500[i][\"MATCHED_RESULTS\"] = {\n",
-        "        \"Matched_path\": list(result.cpath),\n",
-        "        \"Matched_edge_for_each_point\": list(result.opath),\n",
+        "        \"cpath\": list(result.cpath),\n",
+        "        \"opath\": list(result.opath),\n",
         "        \"Matched_edge_index\": list(result.indices),\n",
         "        \"Matched_geometry\": [[float(b) for b in a.split(\" \")] for a in result.mgeom.export_wkt()[11:-1].split(\",\")] if len(result.mgeom.export_wkt()) > 12 else [],\n",
-        "        \"Matched_point\": [[float(b) for b in a.split(\" \")] for a in result.pgeom.export_wkt()[11:-1].split(\",\")] if len(result.pgeom.export_wkt()) > 12 else [],\n",
-        "        \"Detailed_match_infromation\": [\n",
+        "        \"pgeom\": [[float(b) for b in a.split(\" \")] for a in result.pgeom.export_wkt()[11:-1].split(\",\")] if len(result.pgeom.export_wkt()) > 12 else [],\n",
+        "        \"Detailed_match_information\": [\n",
         "            {\n",
         "                \"eid\": c.edge_id,\n",
         "                \"source\": c.source,\n",
@@ -2776,31 +2775,27 @@
         "    print(f\"Processed trajectory index {i}\")\n",
         "\n",
         "# Save the results to a new CSV file\n",
-        "output_csv_path = \"content/data/map_matching.csv\"\n",
+        "output_csv_path = \"/content/data/map_matching.csv\"\n",
         "output_dir = os.path.dirname(output_csv_path)\n",
         "\n",
         "# Ensure the directory exists\n",
         "os.makedirs(output_dir, exist_ok=True)\n",
         "\n",
-        "# Updated headers as per your requirement\n",
-        "headers = [\"t_number\", \"MAP_MATCHING_ALGORITHM\", \"cpath\", \"opath\", \"Matched_edge_index\", \n",
-        "           \"mgeom\", \"pgeom\", \"Detailed_match_information\"]\n",
+        "headers = [\"t_number\", \"MAP_MATCHING_ALGORITHM\", \"cpath\", \"opath\", \"Matched_geometry\", \"pgeom\", \"Detailed_match_information\"]\n",
         "\n",
         "with open(output_csv_path, \"w\", newline='') as csvfile:\n",
         "    writer = csv.DictWriter(csvfile, fieldnames=headers)\n",
         "    writer.writeheader()\n",
         "\n",
         "    for i, trajectory in enumerate(train1500):\n",
-        "        # Add 't_number' as the index or unique identifier\n",
         "        flattened_row = {\n",
         "            \"t_number\": i,  # Unique identifier for each trajectory\n",
-        "            \"MAP_MATCHING_ALGORITHM\": trajectory.get(\"MATCHING_ALGORITHM\", \"\"),\n",
-        "            \"cpath\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Matched_path\", [])),\n",
-        "            \"opath\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Matched_edge_for_each_point\", [])),\n",
-        "            \"Matched_edge_index\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Matched_edge_index\", [])),\n",
-        "            \"mgeom\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Matched_geometry\", [])),\n",
-        "            \"pgeom\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Matched_point\", [])),\n",
-        "            \"Detailed_match_information\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Detailed_match_infromation\", []))\n",
+        "            \"MAP_MATCHING_ALGORITHM\": trajectory.get(\"MAP_MATCHING_ALGORITHM\", \"\"),\n",
+        "            \"cpath\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"cpath\", [])),\n",
+        "            \"opath\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"opath\", [])),\n",
+        "            \"Matched_geometry\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Matched_geometry\", [])),\n",
+        "            \"pgeom\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"pgeom\", [])),\n",
+        "            \"Detailed_match_information\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Detailed_match_information\", []))\n",
         "        }\n",
         "        writer.writerow(flattened_row)\n",
         "\n",
