--- a/Task3.ipynb
+++ b/Task3.ipynb
@@ -2676,6 +2676,7 @@
         }
       ],
       "source": [
+        "# New improvements\n",
         "import os\n",
         "import json\n",
         "import csv\n",
@@ -2733,7 +2734,7 @@
         "            row[\"POLYLINE\"] = []\n",
         "        train1500.append(row)\n",
         "\n",
-        "# Run map matching for each WKT polyline\n",
+        "# Process only the first 10 entries for testing\n",
         "for i, trajectory in enumerate(train1500):\n",
         "    polyline = trajectory[\"POLYLINE\"]\n",
         "    if not polyline:\n",
@@ -2744,60 +2745,78 @@
         "    wkt = \"LINESTRING(\" + \",\".join([\" \".join(map(str, point)) for point in polyline]) + \")\"\n",
         "\n",
         "    result = fmm_model.match_wkt(wkt, fmm_config)\n",
-        "    train1500[i][\"MAP_MATCHING_ALGORITHM\"] = \"fmm\"\n",
+        "    train1500[i][\"MATCHING_ALGORITHM\"] = \"fmm\"\n",
         "\n",
         "    if not list(result.cpath):\n",
         "        result = stmatch_model.match_wkt(wkt, stmatch_config)\n",
-        "        train1500[i][\"MAP_MATCHING_ALGORITHM\"] = \"stmatch\"\n",
+        "        train1500[i][\"MATCHING_ALGORITHM\"] = \"stmatch\"\n",
         "        if not list(result.cpath):\n",
         "            print(f\"No match found for trajectory index {i}, WKT: {wkt}\")\n",
         "\n",
+        "    # Adding matched results according to your output field specifications\n",
         "    train1500[i][\"MATCHED_RESULTS\"] = {\n",
-        "        \"cpath\": list(result.cpath),\n",
+        "        \"id\": i,\n",
+        "        \"ogeom\": wkt,\n",
         "        \"opath\": list(result.opath),\n",
-        "        \"Matched_edge_index\": list(result.indices),\n",
-        "        \"Matched_geometry\": [[float(b) for b in a.split(\" \")] for a in result.mgeom.export_wkt()[11:-1].split(\",\")] if len(result.mgeom.export_wkt()) > 12 else [],\n",
-        "        \"pgeom\": [[float(b) for b in a.split(\" \")] for a in result.pgeom.export_wkt()[11:-1].split(\",\")] if len(result.pgeom.export_wkt()) > 12 else [],\n",
-        "        \"Detailed_match_information\": [\n",
-        "            {\n",
-        "                \"eid\": c.edge_id,\n",
-        "                \"source\": c.source,\n",
-        "                \"target\": c.target,\n",
-        "                \"error\": c.error,\n",
-        "                \"length\": c.length,\n",
-        "                \"offset\": c.offset,\n",
-        "                \"spdist\": c.spdist,\n",
-        "                \"ep\": c.ep,\n",
-        "                \"tp\": c.tp,\n",
-        "            } for c in result.candidates\n",
-        "        ]\n",
+        "        \"error\": [c.error for c in result.candidates],\n",
+        "        \"offset\": [c.offset for c in result.candidates],\n",
+        "        \"length\": [c.length for c in result.candidates],\n",
+        "        \"spdist\": [c.spdist for c in result.candidates],\n",
+        "        \"duration\": [0] * len(result.candidates),  # Placeholder, replace with actual duration if available\n",
+        "        \"speed\": [0] * len(result.candidates),  # Placeholder, replace with actual speed if available\n",
+        "        \"pgeom\": result.pgeom.export_wkt(),\n",
+        "        \"cpath\": list(result.cpath),\n",
+        "        \"tpath\": list(result.indices),\n",
+        "        \"mgeom\": result.mgeom.export_wkt(),\n",
+        "        \"ep\": [c.ep for c in result.candidates],\n",
+        "        \"tp\": [c.tp for c in result.candidates],\n",
+        "        \"matching_algorithm\": train1500[i][\"MATCHING_ALGORITHM\"],\n",
+        "        \"eid\": [c.edge_id for c in result.candidates],\n",
+        "        \"source\": [c.source for c in result.candidates],\n",
+        "        \"target\": [c.target for c in result.candidates]\n",
         "    }\n",
         "    print(f\"Processed trajectory index {i}\")\n",
         "\n",
         "# Save the results to a new CSV file\n",
-        "output_csv_path = \"/content/data/map_matching.csv\"\n",
+        "output_csv_path = \"/content/data/map_matching_1500.csv\"\n",
         "output_dir = os.path.dirname(output_csv_path)\n",
         "\n",
         "# Ensure the directory exists\n",
         "os.makedirs(output_dir, exist_ok=True)\n",
         "\n",
-        "headers = [\"t_number\", \"MAP_MATCHING_ALGORITHM\", \"cpath\", \"opath\", \"Matched_geometry\", \"pgeom\", \"Detailed_match_information\"]\n",
+        "# Define CSV headers based on the modified field names\n",
+        "headers = [\"id\", \"ogeom\", \"opath\", \"error\", \"offset\", \"length\", \"spdist\", \"duration\", \"speed\",\n",
+        "           \"pgeom\", \"cpath\", \"tpath\", \"mgeom\", \"ep\", \"tp\", \"MATCHING_ALGORITHM\", \"eid\", \"source\", \"target\"]\n",
         "\n",
         "with open(output_csv_path, \"w\", newline='') as csvfile:\n",
         "    writer = csv.DictWriter(csvfile, fieldnames=headers)\n",
         "    writer.writeheader()\n",
         "\n",
-        "    for i, trajectory in enumerate(train1500):\n",
-        "        flattened_row = {\n",
-        "            \"t_number\": i,  # Unique identifier for each trajectory\n",
-        "            \"MAP_MATCHING_ALGORITHM\": trajectory.get(\"MAP_MATCHING_ALGORITHM\", \"\"),\n",
-        "            \"cpath\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"cpath\", [])),\n",
-        "            \"opath\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"opath\", [])),\n",
-        "            \"Matched_geometry\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Matched_geometry\", [])),\n",
-        "            \"pgeom\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"pgeom\", [])),\n",
-        "            \"Detailed_match_information\": json.dumps(trajectory[\"MATCHED_RESULTS\"].get(\"Detailed_match_information\", []))\n",
-        "        }\n",
-        "        writer.writerow(flattened_row)\n",
+        "    for trajectory in train1500:\n",
+        "        if \"MATCHED_RESULTS\" in trajectory:\n",
+        "            matched_results = trajectory[\"MATCHED_RESULTS\"]\n",
+        "            flattened_row = {\n",
+        "                \"id\": matched_results[\"id\"],\n",
+        "                \"ogeom\": matched_results[\"ogeom\"],\n",
+        "                \"opath\": json.dumps(matched_results[\"opath\"]),\n",
+        "                \"error\": json.dumps(matched_results[\"error\"]),\n",
+        "                \"offset\": json.dumps(matched_results[\"offset\"]),\n",
+        "                \"length\": json.dumps(matched_results[\"length\"]),\n",
+        "                \"spdist\": json.dumps(matched_results[\"spdist\"]),\n",
+        "                \"duration\": json.dumps(matched_results[\"duration\"]),\n",
+        "                \"speed\": json.dumps(matched_results[\"speed\"]),\n",
+        "                \"pgeom\": matched_results[\"pgeom\"],\n",
+        "                \"cpath\": json.dumps(matched_results[\"cpath\"]),\n",
+        "                \"tpath\": json.dumps(matched_results[\"tpath\"]),\n",
+        "                \"mgeom\": matched_results[\"mgeom\"],\n",
+        "                \"ep\": json.dumps(matched_results[\"ep\"]),\n",
+        "                \"tp\": json.dumps(matched_results[\"tp\"]),\n",
+        "                \"MATCHING_ALGORITHM\": matched_results[\"matching_algorithm\"],\n",
+        "                \"eid\": json.dumps(matched_results[\"eid\"]),\n",
+        "                \"source\": json.dumps(matched_results[\"source\"]),\n",
+        "                \"target\": json.dumps(matched_results[\"target\"])\n",
+        "            }\n",
+        "            writer.writerow(flattened_row)\n",
         "\n",
         "print(f\"Results saved to {output_csv_path}\")\n"
       ]
