Clean Up Task2 to 6

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "fc11d997-fee1-4c9c-8a25-a63b9830066a",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "d7874857-8f90-497b-b824-a97ba1e7b036",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6540d72e",
    "metadata": {},
    "outputs": [],
@@ -95,14 +95,22 @@
     "boundaries = (x_min - buffer_distance, x_max + buffer_distance, y_min - buffer_distance, y_max + buffer_distance)\n",
     "lower_left_x, upper_right_x, lower_left_y, upper_right_y = boundaries\n",
     "\n",
-    "boundary_polygon = Polygon([(lower_left_x, lower_left_y), (upper_right_x, lower_left_y), (upper_right_x, upper_right_y), (lower_left_x, upper_right_y)])\n",
-    "G = ox.graph_from_polygon(boundary_polygon, network_type='drive')\n",
-    "\n"
+    "boundary_polygon = Polygon([(lower_left_x, lower_left_y), (upper_right_x, lower_left_y), (upper_right_x, upper_right_y), (lower_left_x, upper_right_y)])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "0a35caa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = ox.graph_from_polygon(boundary_polygon, network_type='drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "70c3c324",
    "metadata": {},
    "outputs": [
@@ -126,8 +134,6 @@
    ],
    "source": [
     "fig, ax = ox.plot_graph(G, show=False, close=False, figsize=(12,12), bgcolor='black', edge_color='white', node_color='black', node_size=0)\n",
-    "\n",
-    "# Visualize the first 15 trajectories on the road network\n",
     "color_map = plt.cm.jet(np.linspace(0, 1, 15))\n",
     "for i, trajectory in enumerate(trajectories[:15]):\n",
     "    x_coords, y_coords = zip(*trajectory)\n",
@@ -149,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "5dbebdb7",
    "metadata": {},
    "outputs": [
@@ -157,54 +163,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Interactive map with legend saved to data\\GPS_Trajectories_First_15_Trips_with_Legend.html\n"
+      "xMin: -8.689086, yMin: 41.134158, xMax: -8.562348, yMax: 41.180517\n",
+      "Interactive map with legend saved to data\\GPS_Trajectories_First_15_Trips_Folium_1.html\n"
      ]
     }
    ],
    "source": [
+    "#'CartoDB positron' Folium Plot\n",
+    "\n",
+    "# Initialize variables\n",
+    "trajectories = []\n",
+    "trajectory_count = 0\n",
+    "x_max = y_max = x_min = y_min = 0\n",
+    "is_first = True\n",
+    "\n",
     "df_15 = pd.read_csv('data/train-1500.csv', nrows=15)\n",
     "\n",
+    "# Process each polyline in the CSV\n",
     "for polyline in df_15['POLYLINE']:\n",
-    "    polyline = polyline[2: -2]  # Remove extra brackets\n",
+    "    # Remove the outer brackets\n",
+    "    polyline = polyline.strip()[2:-2]\n",
     "    trajectory = []\n",
     "    \n",
     "    if len(polyline) <= 2:\n",
     "        print(f'Skip empty row {trajectory_count}: Length={len(polyline)}, Element={polyline}')\n",
     "    else:\n",
+    "        # Split the polyline into individual coordinate pairs\n",
     "        for coordinate in polyline.split('],['):\n",
-    "            longitude, latitude = map(float, coordinate.strip().split(','))\n",
-    "            trajectory.append((latitude, longitude))  # (latitude, longitude) for Folium\n",
-    "            x_max, y_max, x_min, y_min, is_first = calculate_boundaries(\n",
-    "                x_max, y_max, x_min, y_min, is_first, longitude, latitude)\n",
+    "            try:\n",
+    "                longitude, latitude = map(float, coordinate.strip().split(','))\n",
+    "                # Append as (latitude, longitude) for Folium\n",
+    "                trajectory.append((latitude, longitude))\n",
+    "                # Update boundaries\n",
+    "                x_max, y_max, x_min, y_min, is_first = calculate_boundaries(\n",
+    "                    x_max, y_max, x_min, y_min, is_first, longitude, latitude)\n",
+    "            except ValueError as e:\n",
+    "                print(f'Error parsing coordinate \"{coordinate}\": {e}')\n",
     "    \n",
     "    trajectories.append(trajectory)\n",
     "    trajectory_count += 1\n",
     "\n",
-    "f = folium.Figure(width=1500, height=1000)\n",
+    "print(f'xMin: {x_min}, yMin: {y_min}, xMax: {x_max}, yMax: {y_max}')\n",
     "\n",
+    "# Initialize the Folium map\n",
+    "f = folium.Figure(width=1500, height=1000)\n",
     "map_center = [(y_min + y_max) / 2, (x_min + x_max) / 2]\n",
     "\n",
+    "# Create the Folium map with the specified tiles\n",
     "tiles = 'CartoDB positron'  \n",
     "m = folium.Map(location=map_center, zoom_start=14, tiles=tiles, zoom_control=False).add_to(f)\n",
     "m.fit_bounds([[y_min, x_min], [y_max, x_max]])\n",
     "\n",
+    "# Generate a color map with 15 distinct colors\n",
     "color_map = plt.cm.jet(np.linspace(0, 1, 15))  \n",
     "\n",
-    "# Plot the first 15 trajectories on the Folium map with circle markers\n",
+    "# Disable plotting of lines\n",
     "PLOT_LINES = False  \n",
+    "\n",
+    "# Plot the first 15 trajectories on the Folium map\n",
     "for i, trajectory in enumerate(trajectories[:15]):\n",
     "    color = f'#{int(color_map[i][0]*255):02x}{int(color_map[i][1]*255):02x}{int(color_map[i][2]*255):02x}'\n",
     "    if trajectory:\n",
+    "        # Create a feature group for each trip\n",
     "        feature_group = folium.FeatureGroup(name=f'Trip {i+1}')\n",
-    "        if PLOT_LINES:\n",
-    "            feature_group.add_child(folium.PolyLine(\n",
-    "                trajectory, color=color, weight=4, opacity=0.8))\n",
     "        for point in trajectory:\n",
-    "            feature_group.add_child(folium.CircleMarker(\n",
-    "                location=point, radius=5, color=color, fill=True, fill_color=color, fill_opacity=1))\n",
+    "            folium.CircleMarker(\n",
+    "                location=point, \n",
+    "                radius=5, \n",
+    "                color=color, \n",
+    "                fill=True, \n",
+    "                fill_color=color, \n",
+    "                fill_opacity=1\n",
+    "            ).add_to(feature_group)\n",
+    "    \n",
     "        m.add_child(feature_group)\n",
     "\n",
-    "# Create a custom legend for the map using HTML\n",
+    "# Create a custom legend using HTML\n",
     "legend_html = '''\n",
     "<div style=\"\n",
     "position: fixed; \n",
@@ -229,17 +263,160 @@
     "\n",
     "# Add the legend to the map\n",
     "m.get_root().html.add_child(folium.Element(legend_html))\n",
-    "\n",
     "folium.LayerControl().add_to(m)\n",
-    "\n",
     "output_dir = 'data'\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
-    "output_path = os.path.join(output_dir, 'GPS_Trajectories_First_15_Trips_with_Legend.html')\n",
+    "output_path = os.path.join(output_dir, 'GPS_Trajectories_First_15_Trips_Folium_1.html')\n",
+    "\n",
+    "# Save the map to an HTML file\n",
+    "m.save(output_path)\n",
+    "print(f\"Interactive map with legend saved to {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bf7b03a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xMin: -8.689086, yMin: 41.134158, xMax: -8.562348, yMax: 41.180517\n",
+      "Interactive map with legend saved to data\\GPS_Trajectories_First_15_Trips_with_Legend.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Rerun to plot Folium2\n",
+    "\n",
+    "import folium\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "def calculate_boundaries(current_x_max, current_y_max, current_x_min, current_y_min, is_first, longitude, latitude):\n",
+    "    if is_first:\n",
+    "        current_x_min = current_x_max = longitude\n",
+    "        current_y_min = current_y_max = latitude\n",
+    "        is_first = False\n",
+    "    else:\n",
+    "        current_x_max = max(current_x_max, longitude)\n",
+    "        current_x_min = min(current_x_min, longitude)\n",
+    "        current_y_max = max(current_y_max, latitude)\n",
+    "        current_y_min = min(current_y_min, latitude)\n",
+    "    return current_x_max, current_y_max, current_x_min, current_y_min, is_first\n",
+    "\n",
+    "trajectories = []\n",
+    "trajectory_count = 0\n",
+    "x_max = y_max = x_min = y_min = 0\n",
+    "is_first = True\n",
+    "\n",
+    "df_15 = pd.read_csv('data/train-1500.csv', nrows=15)\n",
+    "\n",
+    "for polyline in df_15['POLYLINE']:\n",
+    "    polyline = polyline.strip()[2:-2]\n",
+    "    trajectory = []\n",
+    "    \n",
+    "    if len(polyline) <= 2:\n",
+    "        print(f'Skip empty row {trajectory_count}: Length={len(polyline)}, Element={polyline}')\n",
+    "    else:\n",
+    "        for coordinate in polyline.split('],['):\n",
+    "            try:\n",
+    "                longitude, latitude = map(float, coordinate.strip().split(','))\n",
+    "                trajectory.append((latitude, longitude))\n",
+    "                x_max, y_max, x_min, y_min, is_first = calculate_boundaries(\n",
+    "                    x_max, y_max, x_min, y_min, is_first, longitude, latitude)\n",
+    "            except ValueError as e:\n",
+    "                print(f'Error parsing coordinate \"{coordinate}\": {e}')\n",
+    "    \n",
+    "    trajectories.append(trajectory)\n",
+    "    trajectory_count += 1\n",
+    "\n",
+    "print(f'xMin: {x_min}, yMin: {y_min}, xMax: {x_max}, yMax: {y_max}')\n",
+    "\n",
+    "# Initialize the Folium map\n",
+    "f = folium.Figure(width=1500, height=1000)\n",
+    "\n",
+    "# Calculate the center of the map\n",
+    "map_center = [(y_min + y_max) / 2, (x_min + x_max) / 2]\n",
+    "\n",
+    "m = folium.Map(location=map_center, zoom_start=14, zoom_control=False).add_to(f)\n",
+    "m.fit_bounds([[y_min, x_min], [y_max, x_max]])\n",
+    "# Generate a color map with 15 distinct colors\n",
+    "color_map = plt.cm.jet(np.linspace(0, 1, 15))  \n",
+    "PLOT_LINES = False  \n",
+    "\n",
+    "# Plot the first 15 trajectories on the Folium map\n",
+    "for i, trajectory in enumerate(trajectories[:15]):\n",
+    "    color = f'#{int(color_map[i][0]*255):02x}{int(color_map[i][1]*255):02x}{int(color_map[i][2]*255):02x}'\n",
+    "    if trajectory:\n",
+    "        feature_group = folium.FeatureGroup(name=f'Trip {i+1}')\n",
+    "        for point in trajectory:\n",
+    "            folium.CircleMarker(\n",
+    "                location=point, \n",
+    "                radius=5, \n",
+    "                color=color, \n",
+    "                fill=True, \n",
+    "                fill_color=color, \n",
+    "                fill_opacity=1\n",
+    "            ).add_to(feature_group)\n",
+    "    \n",
+    "        m.add_child(feature_group)\n",
+    "\n",
+    "# Create a custom legend using HTML\n",
+    "legend_html = '''\n",
+    "<div style=\"\n",
+    "position: fixed; \n",
+    "bottom: 50px; left: 50px; width: 150px; height: 300px; \n",
+    "background-color: white; z-index:9999; font-size:14px;\n",
+    "border:2px solid grey;\n",
+    "overflow: auto;\n",
+    "\">\n",
+    "    <p style=\"margin: 10px;\"><b>Legend</b></p>\n",
+    "    <ul style=\"list-style: none; padding-left: 10px;\">\n",
+    "'''\n",
+    "\n",
+    "# Append each trip to the legend\n",
+    "for i in range(15):\n",
+    "    color_hex = f'#{int(color_map[i][0]*255):02x}{int(color_map[i][1]*255):02x}{int(color_map[i][2]*255):02x}'\n",
+    "    legend_html += f'<li><span style=\"background-color:{color_hex};width:20px;height:5px;display:inline-block;\"></span> Trip {i+1}</li>'\n",
+    "\n",
+    "legend_html += '''\n",
+    "    </ul>\n",
+    "</div>\n",
+    "'''\n",
+    "\n",
+    "m.get_root().html.add_child(folium.Element(legend_html))\n",
+    "folium.LayerControl().add_to(m)\n",
+    "output_dir = 'data'\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)\n",
+    "output_path = os.path.join(output_dir, 'GPS_Trajectories_First_15_Trips_Folium2.html')\n",
+    "# Save the map to an HTML file\n",
     "m.save(output_path)\n",
     "\n",
     "print(f\"Interactive map with legend saved to {output_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fff85469",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f82b0abb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
